--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-17  higepon  <higepon@users.sourceforge.jp>
+
+        * Makefile: Add audio_server2/client build.
+
 2007-06-03  higepon  <higepon@users.sourceforge.jp>
 
         * Set svn:inore.
