--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-19  higepon  <higepon@users.sourceforge.jp>
+
+        * core/scheme/lib/demo.scm.in: Added demo.scm
+
 2007-06-17  Shotaro Tsuji <negi4d41@yahoo.co.jp>
         
         * core/monalibc: Added strftime.
