--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,11 @@
+2007-06-25  higepon  <higepon@users.sourceforge.jp>
+
+        * Graphics/bitmap/Form1.cpp (class Form1): Added (x, y) command line arguments.
+
+        * Graphics/bitmap : Added SAKEBI.JPG.
+
+        * Shells/mshell/Form1.cpp : When startup, call (on-gui-start) procedure.
+
 2007-06-24  higepon  <higepon@users.sourceforge.jp>
 
         * Net/uip/Mona/uipopt.h : Set IP Address 10.0.2.15 for QEMU.
