--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-09  higepon  <higepon@users.sourceforge.jp>
+
+        * core/monalibc/stdlib/qsort.c (qsort): Fixed bug of qsort.
+
 2007-09-08  higepon  <higepon@users.sourceforge.jp>
 
         * core/scheme: Removed Asignment.cpp and added FOREACH_LIST.
