--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-02  higepon  <higepon@users.sourceforge.jp>
+
+        * Multimedia/audio_server_hige/es1370.cpp (es1370_new): change buffer size from 8192 * 10 to 8192 to 100.
+
 2007-09-24  higepon  <higepon@users.sourceforge.jp>
 
         * Games/mtorz/mtorz.cpp (main): Removed MonaMain.
