--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-14  higepon  <higepon@users.sourceforge.jp>
+
+        * core/scheme/scheme.h (SCHEME_WRITE): Fixed a long string evaluation bug. Thx neri.
+
 2007-10-13  higepon  <higepon@users.sourceforge.jp>
 
         * core/file_server/ISO9660/ISO9660FileSystem.cpp (ISO9660FileSystem::setDetailInformation): Fixed a readdir bug. Thx neri.
