--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-05  higepon  <higepon@users.sourceforge.jp>
+
+        * core/kernel/gdb-i386-stub.c: Added.
+
 2007-11-04  higepon  <higepon@users.sourceforge.jp>
 
         * core/scheme/Makefile.dep.inc: Check whether gosh exists or not.
