--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-28  higepon  <higepon@users.sourceforge.jp>
+
+        * Added Devel/gcc: go_0020s. Thx id:h0shu.
+
 2007-10-20  higepon  <higepon@users.sourceforge.jp>
 
         * Multimedia/audio_server/happy/SongButton.h Added for clickable song title label.
