--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-22  higepon  <higepon@users.sourceforge.jp>
+
+        * Net/uip/Mona/main.cpp (class VirtioNet): Packet delay bug fixed. Ping replay takes a few msec.
+
 2009-06-20  higepon  <higepon@users.sourceforge.jp>
 
         * Misc/helloworld/main.cpp (class VirtioNet): VirtioNet works well.
