--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,9 @@
+2009-10-31  higepon  <higepon@users.sourceforge.jp>
+
+	* test/monapi/mutex/mutex.cpp : Added tests for Mutex::lock with timeout.
+
+	* include/monapi/Mutex.h (MonAPI): Added lock with timeout.
+
 2009-10-07  higepon  <higepon@users.sourceforge.jp>
 
 	* RELNOTE: Added.
