--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-03  higepon  <higepon@users.sourceforge.jp>
+
+	* Added --enable-auto-import flag.
+
+	* core/kernel/Thread.h (class Thread): Fixed a bug of clearEventWaiting().
+
 2009-10-31  higepon  <higepon@users.sourceforge.jp>
 
 	* test/monapi/mutex/mutex.cpp : Added tests for Mutex::lock with timeout.
