--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-04  higepon  <higepon@users.sourceforge.jp>
+
+	* doc/config/Languages.txt : Added document tool support.
+
 2009-11-03  higepon  <higepon@users.sourceforge.jp>
 
 	* core/kernel/Process.cpp (Thread::Thread): Refactoring.
